impl: client: fix: cursor visual overflowing the page

--- a/client/src/assets/editor.scss
+++ b/client/src/assets/editor.scss
@@ -650,7 +650,7 @@
 
 .cursor-visual {
     display: none;
-    position: absolute;
+    position: fixed;
     width: 20px;
     height: 20px;
     background-color: #6c29ff;
